<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="myName"
            type="loc.bonacci.aboutme.MyName" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_name_text"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@={myName.name}" />
        <EditText
            android:id="@+id/et_nickname"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="What's your nickname?"
            android:hint="@string/what_s_your_nickname"
            android:textAlignment="center"
            android:inputType="textPersonName"/>

        <Button
            android:id="@+id/btn_done"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:text="@string/btn_done"
            />

        <TextView
            android:id="@+id/tv_nickname"
            style="@style/NameStyle"
            android:visibility="gone"
            android:textAlignment="center"
            android:text="@={myName.nickname}"
            android:paddingBottom="@dimen/padding_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/iv_star_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/btn_star_big_on"
            android:contentDescription="@string/star_image"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_menu_view"
                    android:contentDescription="@string/bio_menu_image" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bio"
                    android:lineSpacingMultiplier="1.2"
                    style="@style/BioStyle"/>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</layout>
